src/test/ui/match/match-pattern-field-mismatch.stderr
error[E0023]: this pattern has 2 fields, but the corresponding tuple variant has 3 fields
  --> $DIR/match-pattern-field-mismatch.rs:10:11
   |
LL |         Rgb(usize, usize, usize),
   |         ------------------------ tuple variant defined here
...
LL |           Color::Rgb(_, _) => { }
   |           ^^^^^^^^^^^^^^^^ expected 3 fields, found 2
   |
help: use `_` to explicitly ignore each field
   |
LL |           Color::Rgb(_, _, _) => { }
   |                          ^^^
help: use `..` to ignore all fields
   |
LL |           Color::Rgb(..) => { }
   |                      ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0023`.
